General gettho design (skrew that material.io stuff)

--- a/index.html
+++ b/index.html
@@ -2,12 +2,70 @@
 <html>
   <head>
     <title>MyLittlePwnage</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet"
-          href="material-components-web.min.css">
+        href="main.css" />
   </head>
-  <body class="mdc-typography">
-    
-    <script src="material-components-web.min.js"></script>
-    <script>mdc.autoInit()</script>
+  <body>   
+        <header>
+            <div>
+                <img height="40" width="40" src="https://derpicdn.net/img/2013/7/6/365909/full.png" />
+            </div>
+            <div>
+                <img height="40" width="40" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScr6GOuixbVi-Sn8Oodr4756CSEdd0YZsUykSvDwficCRMkaxE-g" />
+            </div>
+            <div>
+                <img height="40" width="40" src="http://files.softicons.com/download/social-media-icons/flat-social-media-icons-by-uiconstock/png/512x512/twitter2.png" />
+            </div>
+            <div>
+                <img height="40" width="40" src="http://files.softicons.com/download/social-media-icons/flat-gradient-social-icons-by-guilherme-lima/ico/Reddit.ico" />
+            </div>
+        </header>
+        <main>
+            <section>
+                <img height="200" width="200" src="https://derpicdn.net/img/2013/7/6/365909/full.png" />
+                <h1>Ready to pwn?</h1>
+                <div class="button">Singleplayer</div>
+                <div class="button">Multiplayer</div>
+            </section>
+            <section>
+                <h1>TOP 10 H4ck3r:</h1>
+                <table>
+                    <thead>
+                        <tr>
+                            <td>Name</td>
+                            <td>Points</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr>
+                                <td>Peter</td>
+                                <td>10</td>
+                            </tr>
+                            <tr>
+                                <td>Peter</td>
+                                <td>10</td>
+                            </tr>
+                            <tr>
+                                <td>Peter</td>
+                                <td>10</td>
+                            </tr>
+                            <tr>
+                                <td>Peter</td>
+                                <td>10</td>
+                            </tr>
+                            <tr>
+                                <td>Peter</td>
+                                <td>10</td>
+                            </tr>
+                    </tbody>
+                </table>
+            </section>
+        </main>
+        <footer>
+            <a href="#">Impressum</a>
+            <a href="#">Credits</a>
+            <a href="#">Contact</a>
+        </footer>
   </body>
 </html>
