--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet"
         href="main.css" />
+    <link rel="shortcut icon" href="https://derpicdn.net/img/2013/7/6/365909/full.png" />
   </head>
   <body>   
         <header>
             <div>
-                <img height="40" width="40" src="https://derpicdn.net/img/2013/7/6/365909/full.png" />
+                <img height="40" width="40" src="https://derpicdn.net/img/2013/7/6/365909/full.png" title="MyLittlePwnage" />
             </div>
             <div>
                 <img height="40" width="40" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScr6GOuixbVi-Sn8Oodr4756CSEdd0YZsUykSvDwficCRMkaxE-g" />
@@ -60,6 +61,9 @@
                             </tr>
                     </tbody>
                 </table>
+            </section>
+            <section>
+                
             </section>
         </main>
         <footer>
