Remaining sections for the game

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>MyLittlePwnage</title>
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <!--
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" async/>
+    -->
     <link rel="stylesheet"
         href="main.css" />
     <link rel="shortcut icon" href="https://derpicdn.net/img/2013/7/6/365909/full.png" />
@@ -30,7 +32,37 @@
                 <div class="button">Multiplayer</div>
             </section>
             <section>
-                <h1>TOP 10 H4ck3r:</h1>
+                <h1>monkey</h1>
+                <input type="text" placeholder="Leaked... times" name="input" />
+                <div class="button">Submit</div>
+            </section>
+            <section>
+                <h1>894.322</h1>
+                <input type="text" placeholder="Guess password!" name="input" />
+                <div class="button">Submit</div>
+            </section>
+            <section>
+                <div class="button">Create group</div>
+                <div class="button">Join group</div>
+            </section>
+            <section>
+                <h1>Your group key is: </h1>
+                <h1>dsdfg243df23</h1>
+                <input type="text" placeholder="Enter your name!" name="name" />
+                <div class="button">Enter group</div>
+            </section>
+            <section>
+                <input type="text" placeholder="Enter your name!" name="name" /><br />
+                <input type="text" placeholder="Enter group key!" name="groupkey" />
+                <div class="button">Enter group</div>
+            </section>
+            <section>
+                <!-- TODO: Random gifs here -->
+                <img src="https://media.giphy.com/media/LiWsL77P4tA9a/giphy.gif" />
+                <h1>Waiting for players...</h1>
+            </section>
+            <section>
+                <h1>TOP H4ck3r:</h1>
                 <table>
                     <thead>
                         <tr>
@@ -61,13 +93,16 @@
                             </tr>
                     </tbody>
                 </table>
+                <div class="button">Next round</div>
             </section>
             <section>
-                
+                <h1>B3st Nude wins!</h1>
+                <img src="https://media3.giphy.com/media/SRO0ZwmImic0/giphy.gif" />
+                <div class="button">New game</div>
             </section>
         </main>
         <footer>
-            <a href="#">Impressum</a>
+            <a href="#">Imprint</a>
             <a href="#">Credits</a>
             <a href="#">Contact</a>
         </footer>
