--- a/index.html
+++ b/index.html
@@ -123,12 +123,20 @@
                 <h1>monkey was leaked 23121 times</h1>
                 <h1>answer was leaked 23232323 times </h1>
                 <h1>You gained 2 points</h1>
+                <div class="button">View rankings</div>
+            </section>
+            <section style="text-align: left">
+                <div class="container">
+                    <h1>Imprint</h1><br />
+                    <b>Contact: MyLittlePwnage@lergin.de</b>
+                    <h1>Credits</h1><br />
+                    <b><a href="https://haveibeenpwned.com">HaveIBeenPwned</a></b>: Provides an useful API to check passwords.<br /><br />
+                    <b><a href="https://github.com/danielmiessler/SecLists/blob/master/Passwords/darkweb2017-top10K.txt">Daniel Miessler</a></b>: Provided password lists.
+                </div>
             </section>
         </main>
         <footer>
-            <a href="#">Imprint</a>
-            <a href="#">Credits</a>
-            <a href="#">Contact</a>
+            <a href="#">Imprint and credits</a>
         </footer>
         <script type="module" src="./index.js"></script>  
   </body>
