Adding loading template

--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                     <b><a href="https://github.com/danielmiessler/SecLists/blob/master/Passwords/darkweb2017-top10K.txt">Daniel Miessler</a></b>: Provided password lists.
                 </div>
             </section>
+            <section>
+                <img width="200" height="200" src="https://m.popkey.co/fe4ba7/DYALX.gif" />
+                <h1>Loading...</h1>
+            </section>
         </main>
         <footer>
             <a href="#">Imprint and credits</a>
